fixed banner z-index issue

--- a/rfp_css/style.css
+++ b/rfp_css/style.css
@@ -93,7 +93,7 @@ a:hover {
   padding: 30px 0 35px;
   position: relative;
   background-color: #f15a24;
-  z-index: -1;
+  z-index: 1;
 }
 #banner:before {
   content: "";
